[package]
name = "transpo"
version = "0.1.0"
authors = ["chili-b <dexter.gaonshatford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4"
actix-multipart = "0.3"
futures = "0.3"
actix-http = "2"
fs_extra = "1.2.0"
rand = "0.8.0"
sanitize-filename = "0.3.0"
