[package]
name = "transpo"
version = "0.1.0"
author = "chili-b"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4"
futures = "0.3"
actix-http = "2"
fs_extra = "1.2.0"
rand = "0.8.0"
chrono = "0.4.19"
serde_derive = "1"
serde = "1"
actix = "0.10.0"
actix-web-actors = "3.0.0"
